# SlicerRVXLiverSegmentation

./: .gitignore  .zenodo.json  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  RVesselXLiverSegmentationEffect.py  RVesselXModule.py  RVesselXModuleLogic.py  Vessel.py
Paper/: paper.bib  paper.md
RVXLiverSegmentation/: CMakeLists.txt  RVXLiverSegmentation.py
RVXLiverSegmentation/RVXLiverSegmentationLib/: DataWidget.py  ExtractVesselStrategies.py  RVXLiverSegmentationLogic.py  RVXLiverSegmentationUtils.py  SegmentWidget.py  VerticalLayoutWidget.py  VesselBranchTree.py  VesselBranchWizard.py  VesselHelpWidget.py  VesselSegmentEditWidget.py  VesselWidget.py  __init__.py
RVXLiverSegmentation/RVXLiverSegmentationTest/: ExtractVesselStrategyTestCase.py  ModuleLogicTestCase.py  TestUtils.py  VesselBranchTreeTestCase.py  VesselBranchWizardTestCase.py  VesselSegmentEditWidgetTestCase.py  __init__.py
RVXLiverSegmentationEffect/: CMakeLists.txt  RVXLiverSegmentationEffect.py
RVXLiverSegmentationEffect/RVXLiverSegmentationEffectLib/: SegmentEditorEffect.py
RVesselX/: CMakeLists.txt  RVesselX.py
RVesselX/RVesselXLib/: ExtractVesselStrategies.py  RVesselXLogic.py  SegmentWidget.py  VesselBranchWizard.py  VesselWidget.py  __init__.py
RVesselX/RVesselXTest/: ExtractVesselStrategyTestCase.py  ModuleLogicTestCase.py  TestUtils.py  VesselSegmentEditWidgetTestCase.py  __init__.py
RVesselXLib/: DataWidget.py  ExtractVesselStrategies.py  LiverWidget.py  RVesselXModuleLogic.py  RVesselXUtils.py  SegmentWidget.py  VerticalLayoutWidget.py  Vessel.py  VesselBranchTree.py  VesselBranchWizard.py  VesselSegmentEditWidget.py  VesselTreeWidget.py  VesselWidget.py  __init__.py
RVesselXLiverSegmentationEffect/: CMakeLists.txt  RVesselXLiverSegmentationEffect.py
RVesselXLiverSegmentationEffectLib/: SegmentEditorEffect.py
RVesselXTest/: ExtractVesselStrategyTestCase.py  ModuleLogicTestCase.py  TestUtils.py  VesselBranchTreeTestCase.py  VesselBranchWizardTestCase.py  VesselSegmentEditWidgetTestCase.py  VesselTreeTestCase.py  __init__.py
